# goldberg

./: CHANGELOG.md  Cargo.toml  README.md
src/: config.rs  engine.rs  handler.rs  lib.rs
tests/: origami-input.txt  origami-output.txt  tests.rs
