[package]
name = "goldberg"
description = "A Rust-based obfuscation macro library!"
repository = "https://github.com/frank2/goldberg"
version = "0.1.0"
authors = ["frank2@dc949.org"]
edition = "2021"
license = "GPL-3.0"
keywords = ["obfuscation"]
readme = "README.md"
exclude = ["*~", "#*", "src/#*", "notes.org"]
documentation = "https://docs.rs/goldberg"

[lib]
proc-macro = true

[dependencies]
moisture = "0.1.0"
proc-macro2 = "1.0.36"
quote = "1.0.17"
rand = "0.8.5"
syn = { version = "1.0.91", features = ["full", "extra-traits"] }
